--- a/lab2.1-SpringAOP/pom.xml
+++ b/lab2.1-SpringAOP/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.example</groupId>
-	<artifactId>lab1-JavaConfiguration</artifactId>
+	<artifactId>lab2.1-SpringAOP</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Spring-Constructor-Injection</name>
 	<description>Demo project for Spring Boot</description>
